# repolens

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  REPOLENS-PRD.md  STEPS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_hybrid_search_and_eval.py
backend/src/repolens/: __init__.py  worker.py
backend/src/repolens/agent/: __init__.py  graph.py  state.py  tools.py
backend/src/repolens/agent/prompts/: __init__.py  system_v1.py  system_v2.py
backend/src/repolens/api/: agent_chat.py  app.py  chat.py  deps.py  health.py  middleware.py  repos.py  schemas.py
backend/src/repolens/cache/: __init__.py  redis_cache.py
backend/src/repolens/config/: __init__.py  settings.py
backend/src/repolens/errors/: __init__.py  exceptions.py
backend/src/repolens/graph/: __init__.py  builder.py  client.py  queries.py  schema.py
backend/src/repolens/ingestion/: __init__.py  ast_chunker.py  chunker.py  clone.py  filter.py  graph_pass.py  pipeline.py  walker.py
backend/src/repolens/llm/: __init__.py  completions.py  embeddings.py
backend/src/repolens/observability/: logging.py  tracing.py
backend/src/repolens/retrieval/: __init__.py  hybrid.py  lexical.py  reranker.py  vector.py
backend/src/repolens/storage/: engine.py  models.py
backend/tests/: conftest.py
backend/tests/eval/: agent_eval_set.json  eval_set.json  runner.py  test_eval_gate.py  test_prompt_injection.py
backend/tests/unit/: test_config.py  test_errors.py  test_health.py
context/: ai-workflow-rules.md  architecture-context.md  code-standards.md  progress-tracker.md  project-overview.md  ui-context.md
docker/: docker-compose.yml
docker/initdb/: 01-extensions.sql
docs/: backup-restore.md  runbook.md  security-checklist.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/: api.service.ts  app-state.service.ts  error.interceptor.ts  streaming.service.ts
frontend/src/app/features/chat/: chat-shell.component.html  chat-shell.component.ts
frontend/src/app/features/repos/: repo-selector.component.ts
frontend/src/app/features/traces/: trace-panel.component.html  trace-panel.component.ts
frontend/src/app/shared/: keyboard-shortcuts.component.ts  theme-toggle.component.ts
notebooks/: 01_embedding_intuition.ipynb
notes/: phase-0.md
src/repolens/: __init__.py  cli.py  config.py  embeddings.py  hello.py  llm.py
src/repolens/chat/: __init__.py  answer.py
src/repolens/db/: __init__.py  engine.py  models.py
src/repolens/ingest/: __init__.py  chunker_naive.py  pipeline.py  walker.py
src/repolens/retrieve/: __init__.py  vector.py
tests/: test_chat_answer.py  test_chunker_naive.py  test_embeddings.py  test_llm.py  test_walker.py
