[project]
name = "repolens"
version = "0.1.0"
description = "Code repository analysis via RAG, knowledge graphs, and agentic reasoning."
authors = [
    { name = "v0soft", email = "juanjoseaos@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "anthropic>=0.97.0",
    "openai>=2.33.0",
    "pathspec>=0.12",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0",
    "typer>=0.12",
]

[project.scripts]
repolens-hello = "repolens.hello:main"
repolens = "repolens.cli:app"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "mypy>=1.20.2",
    "numpy>=2.4.4",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pgvector.*", "pathspec.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# `pythonpath = ["src"]` is the resilient escape hatch for the iCloud-Drive
# UF_HIDDEN issue: the editable-install .pth file gets silently hidden by
# iCloud, breaking `import repolens` for pytest. Setting pythonpath here keeps
# the test suite green regardless. CLI use still relies on the .pth (clear with
# `make sync` if it gets re-hidden).
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require a running Postgres (set REPOLENS_TEST_DATABASE_URL)",
]
