[project]
name = "repolens"
version = "0.1.0"
description = "Code analysis system combining AST parsing, RAG, and agentic reasoning"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.14,<2",
    "pgvector>=0.3,<1",
    "structlog>=24.4,<26",
    "anthropic>=0.52,<1",
    "openai>=1.82,<2",
    "httpx>=0.28,<1",
    "arq>=0.26,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
    "pre-commit>=4,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repolens"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # allow assert in tests
    "B008",   # Depends() in function defaults is standard FastAPI pattern
]

[tool.ruff.lint.isort]
known-first-party = ["repolens"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
